--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -28,8 +28,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.bump_version.outputs.version_tag }}
-          release_name: Release ${{ steps.bump_version.outputs.version_tag }}
+          tag_name: ${{ steps.bump_version.outputs.version }}
+          release_name: Release ${{ steps.bump_version.outputs.version }}
           body: ${{ steps.tag_version.outputs.changelog }}
           
 #       - name: Release
