--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -24,7 +24,7 @@ jobs:
           minor_pattern: "(MINOR)"
           format: "${major}.${minor}.${patch}-prerelease${increment}"
           short_tags: false
-          bump_each_commit: false
+          bump_each_commit: true
           
       - name: Create a GitHub release
         uses: actions/create-release@v1
