--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,12 +1,12 @@
 name: Test Versioning
 
 on:
-  push:
-    branches:
-    - master
-#   pull_request:
+#   push:
 #     branches:
 #     - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   build:
