--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,12 +1,12 @@
 name: Test Versioning
 
 on:
-#   push:
-#     branches:
-#     - master
-  pull_request:
+  push:
     branches:
     - master
+#   pull_request:
+#     branches:
+#     - master
 
 jobs:
   build:
@@ -15,27 +15,42 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Bump version
-        id: bump_version
-        uses: paulhatch/semantic-version@v4.0.2
-        with:
-          tag_prefix: "v"
-          major_pattern: "(MAJOR)"
-          minor_pattern: "(MINOR)"
-          format: "${major}.${minor}.${patch}-prerelease${increment}"
-          short_tags: false
-          bump_each_commit: true
+#       - name: Bump version
+#         id: bump_version
+#         uses: paulhatch/semantic-version@v4.0.2
+#         with:
+#           tag_prefix: "v"
+#           major_pattern: "(MAJOR)"
+#           minor_pattern: "(MINOR)"
+#           format: "${major}.${minor}.${patch}-prerelease${increment}"
+#           short_tags: false
+#           bump_each_commit: true
           
-      - name: Create a GitHub release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ steps.bump_version.outputs.version_tag }}
-          release_name: Release ${{ steps.bump_version.outputs.version_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+#       - name: Create a GitHub release
+#         uses: actions/create-release@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           tag_name: ${{ steps.bump_version.outputs.version_tag }}
+#           release_name: Release ${{ steps.bump_version.outputs.version_tag }}
+#           body: ${{ steps.tag_version.outputs.changelog }}
           
 #       - name: Release
 #         uses: softprops/action-gh-release@v1
 #         env:
 #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5.5
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create a GitHub release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
+          release_name: Release ${{ steps.tag_version.outputs.new_tag }}
+          body: ${{ steps.tag_version.outputs.changelog }}
