--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -19,7 +19,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v5.5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_release_rules: major:major:major, minor:minor:minor
+          custom_release_rules: major:major:feat, minor:minor:feat
 
       - name: Create a GitHub release
         uses: actions/create-release@v1
