--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -16,14 +16,22 @@ jobs:
         with:
           fetch-depth: 0
 
+      # - name: Bump version and push tag
+      #   id: tag_version
+      #   uses: mathieudutour/github-tag-action@v5.5
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     release_branches: main
+      #     pre_release_branches: development,staging
+      #     custom_release_rules: major:major, minor:minor
+
       - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v5.5
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches: main
-          pre_release_branches: development,staging
-          custom_release_rules: major:major, minor:minor
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          WITH_V: true
+          RELEASE_BRANCHES: main
 
       - name: Create a GitHub release
         uses: actions/create-release@v1
