--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -41,3 +41,4 @@ jobs:
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
           release_name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
+        if: github.ref == 'refs/heads/main'
