--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
     - development
-    - staging
-    - main
 
 jobs:
   build:
@@ -16,35 +14,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Bump version and push tag
-      #   id: tag_version
-      #   uses: mathieudutour/github-tag-action@v5.5
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     release_branches: main
-      #     pre_release_branches: development,staging
-      #     custom_release_rules: major:major, minor:minor
-
       - name: Bump version and push tag
         id: version
         uses: mathieudutour/github-tag-action@v5.5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches: main
-          pre_release_branches: staging
+          release_branches: development
           custom_release_rules: major:major, minor:minor
-
-      # - name: Bump version and push tag
-      #   id: version
-      #   uses: anothrNick/github-tag-action@1.36.0
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     DEFAULT_BUMP: patch
-      #     WITH_V: true
-      #     RELEASE_BRANCHES: main
-
-      # - run: echo ${{ steps.version.outputs.new_tag }}
-      # - run: echo ${{ steps.version.outputs.tag }}
 
       - name: Create a GitHub release
         uses: actions/create-release@v1
@@ -54,4 +30,3 @@ jobs:
           tag_name: ${{ steps.version.outputs.new_tag }}
           release_name: Release ${{ steps.version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
-        if: github.ref == 'refs/heads/main'
