--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -6,7 +6,7 @@ on:
     - development
 
 jobs:
-  build:
+  version:
     runs-on: ubuntu-latest
     steps:
     
@@ -22,11 +22,11 @@ jobs:
           release_branches: development
           custom_release_rules: major:major, minor:minor
 
-      - name: Create a GitHub release
+      - name: Create GitHub release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.version.outputs.new_tag }}
           release_name: Release ${{ steps.version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+          body: ${{ steps.version.outputs.changelog }}
